	* switch UPnP post back to HTTP 1.1
	* OpenSSL build fixes
	* fix DHT scrape bug

0.16.19 release

	* python binding build fix for boost-1.57.0
	* add --enable-export-all option to configure script, to export all symbols
	  from libtorrent
	* python bindings fixes
	* handle overlong utf-8 sequences
	* fix bug in error handling in protocol encryption

0.16.18 release

	* fix uninitialized values in DHT DOS mitigation
	* fix error handling in file::phys_offset
	* fix bug in HTTP scrape response parsing
	* enable TCP keepalive for socks5 connection for UDP associate
	* fix python3 support
	* fix bug in lt_donthave extension
	* expose i2p_alert to python. cleaning up of i2p connection code
	* fixed overflow and download performance issue when downloading at high rates
	* fixed bug in add_torrent_alert::message for magnet links
	* disable optimistic disconnects when connection limit is low
	* improved error handling of session::listen_on
	* suppress initial 'completed' announce to trackers added with replace_trackers
	  after becoming a seed
	* SOCKS4 fix for trying to connect over IPv6
	* fix saving resume data when removing all trackers
	* fix bug in udp_socket when changing socks5 proxy quickly

0.16.17 release

	* don't fall back on wildcard port in UPnP
	* fix local service discovery for magnet links
	* fix bitfield issue in file_storage
	* added work-around for MingW issue in file I/O
	* fixed sparse file detection on windows
	* fixed bug in gunzip
	* fix to use proxy settings when adding .torrent file from URL
	* fix resume file issue related to daylight savings time on windows
	* improve error checking in lazy_bdecode

0.16.16 release

	* add missing add_files overload to the python bindings
	* improve error handling in http gunzip
	* fix debug logging for banning web seeds
	* improve support for de-selected files in full allocation mode
	* fix dht_bootstrap_alert being posted
	* SetFileValidData fix on windows (prevents zero-fill)